crates/rome_cli/tests/snapshots/main_commands_rage/with_configuration.snap
---
source: crates/rome_cli/tests/commands/rage.rs
expression: content
---
## `rome.json`

```json
{
  "formatter": {
    "enabled": false
  }
}
```

# Emitted Messages

```block
CLI:
  Version:                      0.0.0
  Color support:                **PLACEHOLDER**

Platform:
  CPU Architecture:             **PLACEHOLDER**
  OS:                           **PLACEHOLDER**

Environment:
  BIOME_LOG_DIR:                **PLACEHOLDER**
  NO_COLOR:                     **PLACEHOLDER**
  TERM:                         **PLACEHOLDER**
  JS_RUNTIME_VERSION:           unset
  JS_RUNTIME_NAME:              unset
  NODE_PACKAGE_MANAGER:         unset

Biome Configuration:
  Status:                       Loaded successfully
  Formatter disabled:           true
  Linter disabled:              false
  Organize imports disabled:    false
  VCS disabled:                 true

Server:
  Version:                      0.0.0
  Name:                         rome_lsp
  CPU Architecture:             **PLACEHOLDER**
  OS:                           **PLACEHOLDER**

Workspace:
  Open Documents:               0
```


